# ai-agents

./: .gitignore  AgentOS-Technical.md  AgentOS.md  AgentOS技术方案.md  README
.claude/: settings.json
agent-os/: .pdm-python  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
agent-os/alembic/: env.py
agent-os/configs/: default.yaml
agent-os/scripts/: init_db.py
agent-os/src/agent_os/: __init__.py  config.py  main.py
agent-os/src/agent_os/api/: deps.py  tasks.py
agent-os/src/agent_os/db/: connection.py
agent-os/src/agent_os/db/models/: __init__.py  agent.py  audit_log.py  cost_record.py  policy.py  task.py  task_step.py  tool.py  tool_call.py
agent-os/src/agent_os/gateway/: __init__.py  middleware.py  schemas.py
agent-os/src/agent_os/memory/: __init__.py  interface.py  schemas.py  service.py
agent-os/src/agent_os/model_router/: __init__.py  circuit_breaker.py  interface.py  router.py  schemas.py
agent-os/src/agent_os/model_router/providers/: anthropic_provider.py  base.py  openai_provider.py
agent-os/src/agent_os/observability/: __init__.py  logging.py  metrics.py  tracing.py
agent-os/src/agent_os/orchestrator/: __init__.py  engine.py  interface.py  schemas.py  state_machine.py
agent-os/src/agent_os/policy/: __init__.py  engine.py  interface.py  schemas.py
agent-os/src/agent_os/tool_runtime/: __init__.py  executor.py  interface.py  registry.py  schemas.py
agent-os/tests/: conftest.py
agent-os/tests/test_orchestrator/: test_state_machine.py
agent-os/tests/test_policy/: __init__.py
agent-os/tests/test_tool_runtime/: __init__.py
(+2 files in other folders)
